# QThread-with-moveToThread_console

./: .gitignore  CMakeLists.txt  QThread-with-moveToThread_console.pro  README.md  Rial.cpp  Worker.cpp  Worker.h
src/: CMakeLists.txt  CMakePresets.json  MainClass.cpp  MainClass.h  Rial.h  Worker.cpp  Worker.h  main.cpp
